# Trie-Morph-Segmenter

./: LICENSE.txt  README.md  model.py  pyproject.toml  requirements.txt  tokenization_pipeline.py
tests/: entropy_trie_test.py  segmenter_system_tests.py  test_math_utils.py  tokenization_test.py
tests/test_data/: testfile_1.txt
triemorph/: math_utils.py  model.py  morph_segmenter.py  tokenization_pipeline.py
